--- a/Despliegue_Modelo_Clasificacion_FastAPI.ipynb
+++ b/Despliegue_Modelo_Clasificacion_FastAPI.ipynb
@@ -115,7 +115,8 @@
         "# Evaluar el modelo\n",
         "y_pred = model.predict(X_test)\n",
         "print(f\"Precisión del modelo: {accuracy_score(y_test, y_pred):.4f}\")\n",
-        "print(\"Informe de clasificación:\n\")\n",
+        "print(\"Informe de clasificación:\n",
+        "\")\n",
         "print(classification_report(y_test, y_pred, target_names=wine.target_names))"
       ]
     },
@@ -332,7 +333,8 @@
         "# Verificar la respuesta\n",
         "if response.status_code == 200:\n",
         "    result = response.json()\n",
-        "    print(\"\nRespuesta de la API:\")\n",
+        "    print(\"\n",
+        "Respuesta de la API:\")\n",
         "    print(json.dumps(result, indent=4))\n",
         "    \n",
         "    # Visualizar las probabilidades\n",
@@ -353,7 +355,8 @@
         "    # Comparar con la etiqueta real\n",
         "    true_label = y_test[sample_index]\n",
         "    predicted_label = result[\"prediction\"]\n",
-        "    print(f\"\nEtiqueta real: {true_label} ({wine.target_names[true_label]})\n",
+        "    print(f\"\n",
+        "Etiqueta real: {true_label} ({wine.target_names[true_label]})\n",
         "          f\"Etiqueta predicha: {predicted_label} ({wine.target_names[predicted_label]})\")\n",
         "else:\n",
         "    print(f\"Error: {response.status_code}\")\n",
@@ -407,9 +410,7 @@
         "\n",
         "A continuación se muestra una captura de pantalla de la documentación generada por Swagger UI:\n",
         "\n",
-        "![Swagger UI](https://fastapi.tiangolo.com/img/index/index-01-swagger-ui-simple.png)\n",
-        "\n",
-        "Esta documentación interactiva permite a los usuarios de la API entender cómo utilizarla, qué parámetros espera cada endpoint y qué respuestas devuelve. También permite probar la API directamente desde el navegador."
+        "![Swagger UI](https://fastapi.tiangolo.com/img/index/index-01-swagger-ui-simple.png)\n"
       ]
     },
     {
@@ -451,6 +452,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -467,10 +472,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
-    },
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
     }
   },
   "nbformat": 4,
